syntax = "proto3";

package account;

option java_package = "com.example.account";
option java_outer_classname = "AccountProto";

message UserRequest {
  string user_id = 1;
}

message UserResponse {
  string user_id = 1;
  string name = 2;
  string email = 3;
}

service AccountService {
  rpc GetUserInfo(UserRequest) returns (UserResponse);
}
